examples/http-response-error-interceptor/http_response_error_interceptor.server.out
# Run the service.
bal run http_response_error_interceptor.bal

Executing Target Resource
Executing Response Interceptor 1
error: Http header does not exist
        at ballerina.http.2:externResponseGetHeader(http_response.bal:581)
           ballerina.http.2.Response:getHeader(http_response.bal:109)
           user:interceptResponse(http_response_error_interceptor.bal:19)
Executing Response Error Interceptor
Error occurred : Http header does not exist
